# you-get-a-meme

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
data/: templates.txt
electron/: main.js  preload.js
renderer/: index.html  renderer.js  styles.css
src/you_get_a_meme/: __init__.py  app.py  catalog.py  embeddings.py  server.py
tests/: test_package.py
