[project]
name = "you-get-a-meme"
version = "0.1.0"
description = "A local LLM-powered meme finder and generator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pillow>=10.4",
    "pydantic>=2.8",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.scripts]
you-get-a-meme = "you_get_a_meme.app:main"
you-get-a-meme-build-embeddings = "you_get_a_meme.embeddings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/you_get_a_meme"]

[tool.ruff]
line-length = 100
target-version = "py311"
